--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Evolution Simulator</h1>
-    <h1 id="population">Population: 10</h1>
+    <h1 id="population">Population: 10 / Gen: 0</h1>
     <div class="box">
 
     </div>
