make Child function

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 <body>
     <h1>Evolution Simulator</h1>
     <h1 id="population">Population: 10 / Gen: 0</h1>
+    
     <div class="box">
 
+    </div>
+    <div id="" class="container">
+        <label for="creatureSlider">Creatures</label>
+        <input type="range" min="1" max="40" value="50" class="slider" id="creatureSlider">
+        <label for="foodSlider">Food</label>
+        <input type="range" min="1" max="100" value="50" class="slider" id="foodSlider">
+        <button>Submit</button>
     </div>
     <script src="app.js"></script>
 </body>
