--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="range" min="1" max="40" value="50" class="slider" id="creatureSlider">
         <label for="foodSlider">Food</label>
         <input type="range" min="1" max="100" value="50" class="slider" id="foodSlider">
-        <button>Submit</button>
+        <button id="resetButton">Submit</button>
     </div>
     <script src="app.js"></script>
 </body>
